fix font size calculation when overflow-x occurs

--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -1221,22 +1221,26 @@ span.note {
 	display: block;
 }
 .info-holder {
-	border: solid green 1px;
-	text-align: center;
-	position: absolute;
-	overflow: hidden;
+  border: solid green 1px;
+  text-align: center;
+  position: absolute;
+  overflow-y: hidden;
 }
 .info-holder .title{
-	font-weight: bold;
-	margin: 0;
-	font-size: 2.0em;
-	line-height: 1em;
+  font-weight: bold;
+  margin: 0;
+  font-size: 2.0em;
+  line-height: 1.2em;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 .info-holder .free_text{
-	margin: 0;
-	font-size: 1.6em;
-	line-height: 1em;
-	font-weight: normal;
+  margin: 0;
+  font-size: 1.6em;
+  line-height: 1.1em;
+  font-weight: normal;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 .blue-btn-mdl {
 	padding: 0 32px 0 0;
